--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,12 @@ li {
   list-style-type: none;
 }
 
+h5 {
+  width: 200px;
+  height: 200px;
+  background: blue;
+}
+
 .header {
   display: flex;
   justify-content: flex-start;
@@ -73,9 +79,9 @@ li {
 }
 .photographer__link__img {
   object-fit: cover;
-  width: 500px;
-  height: 500px;
-  border-radius: 250px;
+  width: 300px;
+  height: 300px;
+  border-radius: 150px;
 }
 .photographer__link__tags {
   display: flex;
@@ -85,9 +91,10 @@ li {
   color: #901c1c;
 }
 .photographer__link__location {
+  display: flex;
   color: #db8876;
 }
-.photographer__link__motto {
+.photographer__link__tagline {
   color: #000000;
 }
 .photographer__link__price {
