--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,7 +7,9 @@ body {
 main {
 	display: flex;
 	width: 100%;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 h1 {
 	width: 100%;
