--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -20,8 +20,8 @@ li {
 	list-style-type: none;
 }
 
-h5 {
-	width: 200px;
-	height: 200px;
-	background: blue;
-}
+// h5 {
+// 	width: 200px;
+// 	height: 200px;
+// 	background: blue;
+// }
