--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,11 +6,11 @@
 @import 'base/typography';
 
 @import 'layout/header';
-@import 'layout/nav';
-@import 'layout/footer.scss';
+@import 'layout/__articles.scss';
+@import 'layout/__gallery.scss';
+// @import 'layout/nav';
+// @import 'layout/footer.scss';
 
-@import 'layout/__menu.scss';
-@import 'layout/vignettes.scss';
+// @import 'layout/__menu.scss';
+// @import 'layout/vignettes.scss';
 @import 'utils/boutons.scss';
-
-@import 'layout/__index__articles.scss';
