--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,3 +10,5 @@ $colour-black: #000000;
 $marginH: 15px;
 $marginV: 20px;
 $margindefault: $marginV $marginH $marginV $marginH;
+
+$gallery_container_dim: 400px;
