avant travail tri

--- a/sass/layout/___articles.scss
+++ b/sass/layout/___articles.scss
@@ -1,6 +1,6 @@
 .photographer {
 	width: 25%;
-	border: 1px solid blue;
+	//	border: 1px solid blue;
 	margin: $margindefault;
 	padding: $margindefault;
 
