--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,10 +43,15 @@ li {
   list-style-type: none;
 }
 
+#content {
+  position: absolute;
+  top: 0px;
+  left: 50%;
+}
+
 .header {
   display: flex;
   justify-content: flex-start;
-  border: 1px solid green;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -54,11 +59,11 @@ li {
 }
 .header__logo {
   color: #901c1c;
+  font-size: 2rem;
 }
 .header__nav__ul {
   display: flex;
   flex-direction: row;
-  border: 1px solid red;
 }
 .header__gallery {
   display: block;
@@ -66,7 +71,6 @@ li {
 
 .photographer {
   width: 25%;
-  border: 1px solid blue;
   margin: 20px 15px 20px 15px;
   padding: 20px 15px 20px 15px;
 }
@@ -104,35 +108,19 @@ li {
   display: block;
 }
 .gallery__main__presentation {
-  border: 1px solid red;
   flex-direction: row;
   display: flex;
   justify-content: space-around;
 }
 .gallery__main__presentation__info {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
 }
 .gallery__main__presentation__info__name {
-  border: 1px solid red;
   justify-content: flex-start;
 }
 .gallery__main__presentation__info__location {
-  border: 1px solid red;
   flex-direction: row;
-}
-.gallery__main__presentation__info__location__city {
-  border: 1px solid red;
-}
-.gallery__main__presentation__info__location__country {
-  border: 1px solid red;
-}
-.gallery__main__presentation__info__tagline {
-  border: 1px solid red;
-}
-.gallery__main__presentation__info__tags {
-  border: 1px solid red;
 }
 .gallery__main__gallery {
   display: flex;
@@ -140,14 +128,12 @@ li {
   justify-content: space-around;
   width: 100%;
   height: 100%;
-  border: 1px solid blue;
 }
 .gallery__main__gallery__container {
   margin: 15px;
   display: flex;
   flex-direction: column;
   height: 100%;
-  border: 1px solid green;
 }
 .gallery__main__gallery__container__thumbnail {
   object-fit: cover;
