--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -1,39 +1,39 @@
 .gallery__main {
 	display: block;
 	&__presentation {
-		border: 1px solid red;
+		//border: 1px solid red;
 		flex-direction: row;
 		display: flex;
 		justify-content: space-around;
 
 		&__info {
-			border: 1px solid red;
+			//	border: 1px solid red;
 			display: flex;
 			flex-direction: column;
 
 			&__name {
-				border: 1px solid red;
+				//	border: 1px solid red;
 				justify-content: flex-start;
 			}
 
 			&__location {
-				border: 1px solid red;
+				//	border: 1px solid red;
 				flex-direction: row;
-				&__city {
-					border: 1px solid red;
-				}
-				&__country {
-					border: 1px solid red;
-				}
+				// &__city {
+				// 	border: 1px solid red;
+				// }
+				// &__country {
+				// 	//border: 1px solid red;
+				// }
 			}
 
-			&__tagline {
-				border: 1px solid red;
-			}
+			// &__tagline {
+			// //	border: 1px solid red;
+			// }
 
-			&__tags {
-				border: 1px solid red;
-			}
+			// &__tags {
+			// 	//border: 1px solid red;
+			// }
 		}
 	}
 
@@ -44,7 +44,7 @@
 
 		width: 100%;
 		height: 100%;
-		border: 1px solid blue;
+		//border: 1px solid blue;
 
 		&__container {
 			// width: $gallery_container_dim;
@@ -54,7 +54,7 @@
 			display: flex;
 			flex-direction: column;
 			height: 100%;
-			border: 1px solid green;
+			//border: 1px solid green;
 
 			&__thumbnail {
 				//display: flex;
