--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,19 +1,25 @@
+#content {
+	position: absolute;
+	top: 0px;
+	left: 50%;
+}
 .header {
 	display: flex;
 	justify-content: flex-start;
-	border: 1px solid green;
+	//border: 1px solid green;
 	position: absolute;
 	top: 0px;
 	left: 0px;
 	width: 100%;
 	&__logo {
 		color: $colour-primary;
+		font-size: 2rem;
 	}
 	&__nav {
 		&__ul {
 			display: flex;
 			flex-direction: row;
-			border: 1px solid red;
+			//border: 1px solid red;
 		}
 	}
 
