--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -87,35 +87,35 @@
 			}
 		}
 	}
-
-	//--------------------------------------------------------------------------
-	// <div class="gallery">
-	// 				<div class="gallery__container">
-	// 					<img
-	// 						src="images\Mimi\Animals_Rainbow.jpg"
-	// 						alt="jkhg"
-	// 						class="gallery__container__thumbnail"
-	// 					/>
-	// 				</div>
-	// 			</div>
 }
 
-// .gallery {
-// 	display: flex;
-// 	flex-wrap: wrap;
-// 	justify-content: space-around;
+.bottom {
+	background-color: $colour-secondary;
+	border-radius: 5px 5px 0px 0px;
 
-// 	width: 100%;
-// 	height: 100%;
-// 	border: 1px solid blue;
-// }
-// 	<div class="gallery__info">
-// 	<div class="gallery__info__title">Ici, le titre</div>
-// 	<div class="gallery__info__likes">
-// 		<div class="gallery__info__likes__number">12</div>
-// 		<div class="gallery__info__likes__heart">
-// 			<i class="fas fa-heart"></i>
-// 			<!-- <i class="far fa-heart"></i> -->
-// 		</div>
-// 	</div>
-// </div>
+	position: fixed;
+	bottom: 0px;
+	right: 30px;
+	//float: bottom;
+	font-size: 1.2rem;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0px 30px;
+	padding: 20px;
+	width: auto;
+	//width: 200px;
+	//height: 100px;
+	&__likes {
+		display: flex;
+		//flex-direction: row;
+		&__heart {
+			margin-left: 5px;
+		}
+	}
+
+	&__price {
+		margin-left: 30px;
+	}
+}
