--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $colour-primary: #901c1c;
 $colour-secondary: #db8876;
 $colour-tertiary: #d3573c;
 $colour-grey: #525252;
+$colour-light-grey: #c4c4c4;
 $colour-white: #fff;
 $colour-black: #000000;
 
@@ -12,3 +13,9 @@ $marginV: 20px;
 $margindefault: $marginV $marginH $marginV $marginH;
 
 $gallery_container_dim: 400px;
+
+/*Radii*/
+$radius-small: 5px;
+
+//modal
+$modal-duration: 5s;
