--- a/sass/utils/boutons.scss
+++ b/sass/utils/boutons.scss
@@ -1,14 +1,12 @@
 button {
 	border-radius: 11px;
 	margin-right: 5px;
-	border: 1px solid $colour-primary;
+	border: 1px solid $colour-light-grey;
 	@include colorway-red-on-white;
 	&:hover {
 		@include colorway-white-on-red;
+		border: 1px solid $colour-primary;
 	}
-	// &:focus {
-	// 	@include colorway-white-on-red;
-	// }
 }
 
 .tag {
@@ -20,7 +18,17 @@ button {
 		@include colorway-red-on-white;
 	}
 }
-
+.pointer {
+	cursor: pointer;
+}
 .gallery__main__presentation__btn {
-	border-radius: 2px;
+	@include colorway-white-on-red;
+	border-radius: $radius-small;
+
+	border: none;
+	height: 50px;
+	&:hover {
+		@include colorway-black-on-salmon;
+		border: none;
+	}
 }
