--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -19,3 +19,7 @@ $radius-small: 5px;
 
 //modal
 $modal-duration: 5s;
+
+//lightbox
+$lightbox-btn-size: 20px;
+$lightbox-btn-margin: 100px 300px 100px 300px;
