--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,6 +137,7 @@ li {
   display: flex;
   flex-direction: column;
   height: 100%;
+  cursor: pointer;
 }
 .gallery__main__gallery__container__thumbnail {
   object-fit: cover;
