--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -56,6 +56,7 @@
 			flex-direction: column;
 			height: 100%;
 			//border: 1px solid green;
+			cursor: pointer;
 
 			&__thumbnail {
 				//display: flex;
