--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -23,3 +23,5 @@ $modal-duration: 5s;
 //lightbox
 $lightbox-btn-size: 20px;
 $lightbox-btn-margin: 50px 100px 100px 100px;
+$lightbox-width: 1050px;
+$lighbox-height: 900px;
