--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,7 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin-bottom: 60px;
   width: 100%;
   height: 100%;
 }
@@ -159,6 +160,7 @@ li {
 }
 .gallery__main__gallery__container__info__likes__heart {
   cursor: pointer;
+  z-index: 1;
 }
 
 .bottom {
