--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -25,7 +25,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
-
+		margin-bottom: 60px;
 		width: 100%;
 		height: 100%;
 
@@ -59,6 +59,7 @@
 					}
 					&__heart {
 						cursor: pointer;
+						z-index: 1;
 					}
 				}
 			}
@@ -230,23 +231,5 @@
 		}
 	}
 }
-
-// <div class="modal lightbox__modal">
-// 	<div class="modal__bground lightbox__modal__bground"></div>
-// 	<div class="modal__container lightbox__modal__container">
-// 		<span class="close pointer lightboxBtn" id="btnCloseLightbox"
-// 			>&times;</span
-// 		>
-// 		<span class="prev pointer lightboxBtn" id="btnPrevLightbox"
-// 			>&times;</span
-// 		>
-// 		<span class="next pointer lightboxBtn" id="btnNextLightbox"
-// 			>&times;</span
-// 		>
-// 		<div class="lightbox__modal__imgContainer">
-// 			<img src="images\Mimi\Event_BenevidesWedding.jpg" alt="" />
-// 		</div>
-// 	</div>
-// </div>
 
 ///////////////////////////////END lightBox modal
