--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -30,8 +30,9 @@
 		height: 100%;
 
 		&__container {
+			//article
 			margin: $marginH;
-			display: flex;
+			//display: flex;
 			flex-direction: column;
 			height: 100%;
 
