--- a/sass/layout/__gallery.scss
+++ b/sass/layout/__gallery.scss
@@ -214,13 +214,13 @@
 		align-items: center;
 		justify-content: center;
 		&__mediaContainer {
-			border: 1px solid red;
+			//border: 1px solid red;
 			width: $lightbox-width;
 			height: $lighbox-height;
 			&__media {
 				//display: flex;
 				//margin: 10px auto;
-				border: 1px solid green;
+				//	border: 1px solid green;
 				object-fit: contain;
 				width: 100%;
 				height: 100%;
