--- a/public/css/style.css
+++ b/public/css/style.css
@@ -297,6 +297,7 @@ button {
   border-radius: 11px;
   margin-right: 5px;
   border: 1px solid #c4c4c4;
+  cursor: pointer;
   color: #901c1c;
   background: #fff;
 }
