--- a/sass/utils/boutons.scss
+++ b/sass/utils/boutons.scss
@@ -2,6 +2,7 @@ button {
 	border-radius: 11px;
 	margin-right: 5px;
 	border: 1px solid $colour-light-grey;
+	cursor: pointer;
 	@include colorway-red-on-white;
 	&:hover {
 		@include colorway-white-on-red;
