--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -25,3 +25,5 @@ $lightbox-btn-size: 20px;
 $lightbox-btn-margin: 50px 100px 100px 100px;
 $lightbox-width: 1050px;
 $lighbox-height: 900px;
+
+$photographer-avatar-dims: 180px;
