--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,6 +2,7 @@
 	&__linkContainer {
 		display: flex;
 		justify-content: center;
+
 		&__link {
 			//font
 			@include colorway-black-on-salmon;
@@ -13,6 +14,10 @@
 			vertical-align: middle;
 			line-height: 30px;
 			margin-top: $marginV * 0.2;
+			opacity: 0.2;
+			transform: scaleY(1);
+			transform-origin: 0% -100%;
+			animation: apparition 0.6s forwards;
 		}
 	}
 
@@ -21,6 +26,7 @@
 		margin-left: $marginH;
 		align-items: center;
 		margin-top: -8px;
+		z-index: 1;
 		&__logo {
 			color: $colour-primary;
 			width: 30%;
@@ -44,6 +50,7 @@
 				display: flex;
 				margin: 0;
 				padding: 0;
+				z-index: 2;
 			}
 		}
 	}
@@ -55,6 +62,7 @@
 		top: $marginH;
 		right: $marginV;
 		font-weight: normal;
+		width: auto;
 	}
 }
 .gallery___nav {
